--- a/password generator/index.html
+++ b/password generator/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <h1>AMER's PassWord<br><span>Generator</span></h1>
-    <input type="number" min="6" max="12" id="counter"><br><br>
+    <input type="number" min="6" max="24" placeholder="Digits" id="counter"><br><br>
     <input type="text" placeholder="PassWord" readonly value="" id="box"><br>
-    <br><img src="copy.png" alt="copy" id="copy"><img src="generate.png" alt="generate" id="generate">
+    <br><img title="copy" src="copy.png" alt="copy" id="copy"><img src="generate.png" alt="generate" title="generate" id="generate"><br>
+    <a href="https://github.com/amerdebes/password-generator-chrome-extension" target="_blank" title="project on github"><img src="gihub.png" alt="github icon"></a>
     <script src="script.js"></script>
 </body>
 </html>
